# ############################################################################
# setup.cfg
# =========
# Author : Adrian S. ROMAN [asroman@ucdavis.edu]
# ############################################################################

[metadata]
name = deepwavetorch
summary = DeepWave pytorch implementation. []
long_description = file:README.md
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    array signal processing
    first-order convex optimization
    inverse problems
    neural networks
    graph neural networks

author = Adrian S. ROMAN [ucdavis, usc]
author_email = asroman@ucdavis.edu
url = https://github.com/adrianSRoman/DeepWaveTorch
download_url = git@github.com:adrianSRoman/DeepWaveTorch.git

classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: pytorch
    Topic :: Scientific/Engineering
license = GPLv3

[options]
include_package_data = True
python_requires = >=3.6
zip_safe = False

[files]
packages =
    deepwavetorch
data_files =
